[package]
name = "autojump"
version = "0.4.0"
authors = ["Wang Xuerui <git@xen0n.name>"]
description = "A Rust port and drop-in replacement of autojump"
repository = "https://github.com/xen0n/autojump-rs"
readme = "README.md"
license = "GPL-3.0+"
include = ["src/**/*.rs", "Cargo.toml"]
edition = "2018"


[profile.release]
lto = true


[features]
default = []
nightly = []


[dependencies]
atomicwrites = "0.3.0"
clap = "2"
regex = "1.5"
serde = "1.0.128"
serde_derive = "1.0.128"
strsim = "0.10"
dirs = "3.0"
